--- a/ContactManager_WebApp/Views/Contacts/Index.cshtml
+++ b/ContactManager_WebApp/Views/Contacts/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="UploadCsv">Create New (Upload CSV)</a>
 </p>
 <table class="table">
     <thead>
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.DateOfBirth)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Married)
+                @(item.Married ? "Yes" : "No")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
@@ -50,7 +50,6 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
