--- a/ContactManager_WebApp/Views/Contacts/Delete.cshtml
+++ b/ContactManager_WebApp/Views/Contacts/Delete.cshtml
@@ -27,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Married)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Married)
+            @(Model.Married ? "Yes" : "No")
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Phone)
