Refactor project structure

--- a/ContactManager_WebApp/Views/Contacts/Delete.cshtml
+++ b/ContactManager_WebApp/Views/Contacts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContactManager_WebApp.Models.Contact
+﻿@model ContactManager_WebApp.DataAccess.Models.Contact
 
 @{
     ViewData["Title"] = "Delete";
