--- a/ContactManager_WebApp/Views/Contacts/Index.cshtml
+++ b/ContactManager_WebApp/Views/Contacts/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ContactManager_WebApp.Models.Contact>
+﻿@model IEnumerable<ContactManager_WebApp.DataAccess.Models.Contact>
 
 @{
     ViewData["Title"] = "Index";
