--- a/ContactManager_WebApp/Views/Shared/_Error.cshtml
+++ b/ContactManager_WebApp/Views/Shared/_Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model ContactManager_WebApp.Models.ErrorViewModel
+﻿@model ContactManager_WebApp.DataAccess.Models.ErrorViewModel
 
 @{
     ViewData["Title"] = "Error";
