--- a/ContactManager_WebApp/Views/_ViewImports.cshtml
+++ b/ContactManager_WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ContactManager_WebApp
-@using ContactManager_WebApp.Models
+@using ContactManager_WebApp.DataAccess.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
